# stableguard

./: .env.example  .gitignore  Anchor.toml  CLAUDE.md  PRD.md  README.md  RESEARCH-PRP.md  package-lock.json  package.json
agent/: package.json
agent/src/: config.ts  decision-explainer.ts  executor.ts  index.ts  monitor.ts  on-chain.ts  regime-detector.ts  risk-engine.ts  yield-tracker.ts
app/: package.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/components/: ActionLog.tsx  Header.tsx  PriceChart.tsx  RiskGauge.tsx  YieldTable.tsx
app/src/hooks/: useAgentState.ts
app/src/lib/: types.ts
programs/stableguard/: Cargo.toml
programs/stableguard/src/: lib.rs
