[package]
name = "stableguard"
version = "0.1.0"
description = "StableGuard: Autonomous Stablecoin Risk Intelligence for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "stableguard"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.0"
